jilles      2005/10/12 23:26:38 UTC	(20051012-2867)
  Log:
  ircnet ircd notes
  

  Changes:	Modified:
  +14 -0	trunk/doc/IRCD (File Modified) 


jilles      2005/10/12 23:10:04 UTC	(20051012-2865)
  Log:
  Lots of ircnet fixes, including ugly ones.
  

  Changes:	Modified:
  +72 -18	trunk/protocol/ircnet.c (File Modified) 


nenolod     2005/10/12 23:09:06 UTC	(20051012-2863)
  Log:
  Fix a memory corruption error in akill deletion.

  Changes:	Modified:
  +1 -2		trunk/src/node.c (File Modified) 


nenolod     2005/10/12 22:53:56 UTC	(20051012-2861)
  Log:
  Make sure there's a hostbuf in AKILL.

  Changes:	Modified:
  +8 -1		trunk/modules/operserv/akill.c (File Modified) 


nenolod     2005/10/12 21:40:43 UTC	(20051012-2859)
  Log:
  - Fix a compile warning here.
  

  Changes:	Modified:
  +1 -1		trunk/src/confparse.c (File Modified) 


jilles      2005/10/12 21:37:34 UTC	(20051012-2857)
  Log:
  Bail out of chanuser_add() if channel is NULL. This avoids
  crashes with !channels with ircnet ircd, for example.
  

  Changes:	Modified:
  +3 -0		trunk/src/node.c (File Modified) 


jilles      2005/10/12 21:19:57 UTC	(20051012-2855)
  Log:
  Fix chanserv rejoining on kick, as in protocol/charybdis.c 2397
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ircnet.c (File Modified) 


jilles      2005/10/12 11:05:25 UTC	(20051012-2853)
  Log:
  Show origin of CLEAR USERS command in kick reason.
  

  Changes:	Modified:
  +6 -3		trunk/modules/chanserv/clear_users.c (File Modified) 


jilles      2005/10/12 10:16:33 UTC	(20051012-2851)
  Log:
  Avoid kicking any services on /cs clear users, not just chanserv.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/clear_users.c (File Modified) 


pfish       2005/10/12 09:49:01 UTC	(20051012-2849)
  Log:
  bugfix
  

  Changes:	Modified:
  +2 -1		trunk/modules/chanserv/clear_users.c (File Modified) 


nenolod     2005/10/11 22:17:11 UTC	(20051011-2847)
  Log:
  Unbreak. >_<.
  

  Changes:	Modified: